--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "jotai": "^2.7.1",
+    "mongodb": "^6.5.0",
     "next": "14.1.2",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
@@ -21,5 +22,9 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.1.2"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "server.js",
+  "author": "Oscar Li",
+  "license": "ISC"
 }
